<resources>
    <string name="app_name">Zing MP3</string>
    <string name="headset">Headset</string>
    <string name="favorite">Favorite</string>
    <string name="person">Person</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Hey there,</string>
    <string name="login">Login</string>
    <string name="welcome_login"><b>Welcome Back</b></string>
    <string name="register">Register</string>
    <string name="create_account"><b>Create an Account</b></string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="or">Or</string>
    <string name="forgot_password"><u>Forgot your password?</u></string>
    <string name="account_login">Don\'t have an account yet?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="had_have_account">Already have an account?</string>
    <string name="text_format">Please enter correct format</string>
    <string name="text_check_book">By continuing you accept our Privacy Policy and \nTerm of Use</string>
    <string name="title_forgot_password">Forgot Password?</string>
    <string name="resent_otp"><u>Click to resend</u></string>
    <string name="button">Reset Password</string>
    <string name="otp">Continue</string>
    <string name="text_resent_otp">Didn\'t receive the email?</string>
    <string name="text_forgot_password">No worries, we\'ll send you reset instructions?</string>
    <string name="back_login">Back to log in</string>
    <string name="password_reset">Password reset</string>
    <string name="we_sent_code_to">We sent a code to </string>
    <string name="enter_email">Enter your email</string>
    <string name="register_success">Register Success</string>
    
    <string name="string_register_first">Please enter your last name</string>
    <string name="string_register_last">Please enter your name</string>
    <string name="string_register_email">Please enter your email</string>
    <string name="string_register_format_email">Invalid email, please enter correct format</string>
    <string name="string_register_phone">Please enter your phone</string>
    <string name="string_register_format_phone">Phone number must be ten digits</string>
    <string name="string_register_password">Please enter your password</string>
    <string name="string_register_format_password">Password must be at least six characters</string>
    <string name="register_failed">Registration failed</string>
    
    // forgot password
    
    <string name="title_set_password"><b>Set new password</b></string>
    <string name="confirm_password">Confirm password</string>
    <string name="text_set_password">Must be at least 6 characters</string>
    <string name="input_password">Enter your password</string>
    <string name="input_confirm_password">Enter your confirm password</string>
</resources>