<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authen.LoginActivity">

    <TextView
        android:id="@+id/title"
        android:text="@string/title"
        android:textSize="15.dp"
        android:textColor="@color/light_gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/welcomeBack"
        android:text="@string/welcome_login"
        android:textSize="22.sp"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"/>

    <EditText
        android:id="@+id/inputEmail"
        android:autofillHints=""
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="16.dp"
        android:textColor="@color/black"
        android:textColorHint="@color/white"
        android:drawableStart="@drawable/icon_email"
        android:drawableTint="@color/white"
        android:drawablePadding="10dp"
        android:paddingStart="15dp"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/input"
        android:alpha="0.9"
        app:layout_constraintTop_toBottomOf="@id/welcomeBack"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/inputPassword"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="16.dp"
        android:autofillHints=""
        android:textColor="@color/black"
        android:textColorHint="@color/white"
        android:drawableStart="@drawable/icon_lock"
        android:drawableEnd="@drawable/icon_eye"
        android:drawableTint="@color/white"
        android:drawablePadding="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/input"
        android:alpha="0.9"
        app:layout_constraintTop_toBottomOf="@id/inputEmail"/>

    <TextView
        android:id="@+id/forgotPassword"
        android:text="@string/forgot_password"
        android:textColor="@color/gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/inputPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonLogin"
        android:text="@string/login"
        android:textSize="16.dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:background="@drawable/button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="20dp"
        android:alpha="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textOr"/>

    <ProgressBar
        android:id="@+id/progressLogin"
        android:visibility="gone"
        android:layout_marginBottom="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textOr"
        android:layout_width="35dp"
        android:layout_height="35dp"/>

    <View
        android:background="@color/light_gray"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="34dp"
        app:layout_constraintBottom_toTopOf="@id/imageGoogleAndFacebook"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textOr"/>

    <View
        android:background="@color/light_gray"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="34dp"
        app:layout_constraintBottom_toTopOf="@id/imageGoogleAndFacebook"
        app:layout_constraintStart_toEndOf="@id/textOr"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textOr"
        android:text="@string/or"
        android:textSize="15.dp"
        android:textColor="@color/light_gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toTopOf="@id/imageGoogleAndFacebook"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/imageGoogleAndFacebook"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@id/linearBottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <FrameLayout
            android:background="@drawable/background_view_frame"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginEnd="17dp"
            android:padding="6dp">

            <ImageView
                android:importantForAccessibility="no"
                android:src="@drawable/google"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </FrameLayout>

        <FrameLayout
            android:background="@drawable/background_view_frame"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginStart="17dp"
            android:padding="1dp">

            <ImageView
                android:importantForAccessibility="no"
                android:src="@drawable/facebook"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearBottom"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:text="@string/account_login"
            android:textSize="14.dp"
            android:textColor="@color/gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"/>

        <TextView
            android:id="@+id/textRegister"
            android:text="@string/register"
            android:textSize="14.dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
