<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authen.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="15sp"
                android:textColor="@color/light_gray"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp" />

            <TextView
                android:id="@+id/welcomeBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:textSize="20sp"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="7dp" />

            <LinearLayout
                android:id="@+id/linearName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="35dp"
                app:layout_constraintTop_toBottomOf="@id/welcomeBack"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <EditText
                    android:id="@+id/inputFirstName"
                    android:layout_width="0dp"
                    android:alpha="0.9"
                    android:layout_height="58dp"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:inputType="text"
                    android:drawablePadding="7dp"
                    android:paddingStart="7dp"
                    android:hint="@string/first_name"
                    android:textSize="15sp"
                    android:background="@drawable/input"
                    android:textColorHint="@color/white"
                    android:textColor="@color/black"
                    android:drawableStart="@drawable/round_person_24"
                    android:drawableTint="@color/white"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="5dp"
                    tools:ignore="RtlSymmetry,TextFields" />

                <EditText
                    android:id="@+id/inputLastName"
                    android:layout_width="0dp"
                    android:inputType="text"
                    android:alpha="0.9"
                    android:drawablePadding="7dp"
                    android:paddingStart="7dp"
                    android:layout_height="58dp"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:hint="@string/last_name"
                    android:textSize="15sp"
                    android:background="@drawable/input"
                    android:textColorHint="@color/white"
                    android:textColor="@color/black"
                    android:drawableStart="@drawable/round_person_24"
                    android:drawableTint="@color/white"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="8dp"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>

            <EditText
                android:id="@+id/inputEmail"
                android:inputType="textEmailAddress"
                android:autofillHints=""
                tools:ignore="RtlSymmetry"
                android:alpha="0.9"
                android:drawablePadding="7dp"
                android:paddingStart="7dp"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:hint="@string/email"
                android:textSize="15sp"
                android:background="@drawable/input"
                android:textColorHint="@color/white"
                android:textColor="@color/black"
                android:drawableStart="@drawable/round_email_24"
                android:drawableTint="@color/white"
                android:layout_marginTop="30dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toBottomOf="@id/linearName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/inputPhone"
                android:drawablePadding="7dp"
                android:paddingStart="7dp"
                android:autofillHints=""
                android:alpha="0.9"
                tools:ignore="RtlSymmetry,TextFields"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:hint="@string/phone"
                android:textSize="15sp"
                android:background="@drawable/input"
                android:textColorHint="@color/white"
                android:textColor="@color/black"
                android:inputType="number"
                android:drawableStart="@drawable/round_phone_24"
                android:drawableTint="@color/white"
                android:layout_marginTop="30dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toBottomOf="@id/inputEmail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:hint="@string/password"
                android:textSize="15sp"
                android:drawablePadding="7dp"
                android:paddingStart="7dp"
                android:autofillHints=""
                android:alpha="0.9"
                android:paddingEnd="7dp"
                android:drawableEnd="@drawable/icon_eye"
                android:background="@drawable/input"
                android:textColorHint="@color/white"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:drawableStart="@drawable/round_lock_24"
                android:drawableTint="@color/white"
                android:layout_marginTop="30dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toBottomOf="@id/inputPhone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="RtlSymmetry" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_check_book"
                android:textSize="13sp"
                android:layout_marginStart="7dp"
                android:textColor="@color/light_gray"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/inputPassword"
                app:layout_constraintStart_toStartOf="parent"
                android:paddingStart="17dp"
                tools:ignore="RtlSymmetry" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonRegister"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/register"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:background="@drawable/button"
                android:textAllCaps="false"
                android:layout_marginTop="55dp"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"
                app:layout_constraintTop_toBottomOf="@id/checkBox"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <ProgressBar
                android:id="@+id/progressbarRegister"
                android:layout_marginTop="65dp"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/checkBox"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="35dp"
                android:layout_height="35dp"/>

            <View
                app:layout_constraintStart_toStartOf="parent"
                android:background="@color/light_gray"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="39dp"
                app:layout_constraintTop_toBottomOf="@id/buttonRegister"
                app:layout_constraintEnd_toStartOf="@id/textOr"
                android:layout_width="0dp"
                android:layout_height="1dp"/>

            <View
                android:background="@color/light_gray"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="39dp"
                app:layout_constraintTop_toBottomOf="@id/buttonRegister"
                app:layout_constraintStart_toEndOf="@id/textOr"
                android:layout_width="0dp"
                android:layout_height="1dp"/>
            <TextView
                android:id="@+id/textOr"
                android:text="@string/or"
                android:textSize="15.dp"
                android:textColor="@color/light_gray"
                android:layout_marginTop="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/buttonRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:id="@+id/imageGoogleAndFacebook"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="25dp"
                app:layout_constraintTop_toBottomOf="@id/textOr"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <FrameLayout
                    android:background="@drawable/background_view_frame"
                    android:layout_marginEnd="17dp"
                    android:padding="6dp"
                    android:layout_width="55dp"
                    android:layout_height="55dp">

                    <ImageView
                        android:importantForAccessibility="no"
                        android:src="@drawable/google"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                </FrameLayout>

                <FrameLayout
                    android:background="@drawable/background_view_frame"
                    android:layout_marginStart="17dp"
                    android:padding="1dp"
                    android:layout_width="55dp"
                    android:layout_height="55dp">

                    <ImageView
                        android:importantForAccessibility="no"
                        android:src="@drawable/facebook"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearBottom"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageGoogleAndFacebook"
                android:layout_width="match_parent"
                android:layout_height="30dp">

                <TextView
                    android:textSize="14.dp"
                    android:textColor="@color/gray"
                    android:layout_marginEnd="2dp"
                    android:text="@string/had_have_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:textSize="14.dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_marginStart="2dp"
                    android:text="@string/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>